Fix CSS glitch on mobile phones

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -13,13 +13,13 @@
 }
 
 .headerImage {
-  /* width: 6em;
-  height: 6em; */
+  width: 6em;
+  height: 6em;
 }
 
 .headerHomeImage {
-  /* width: 8em;
-  height: 8em; */
+  width: 8em;
+  height: 8em;
 }
 
 .backToHome {
