--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -55,6 +55,10 @@
   color: #999;
 }
 
+.colorWhiteSmoke {
+  color: whitesmoke;
+}
+
 .clickableImage {
   transition: 0.3s;
   cursor: pointer;
